--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.9.0",
+    "file-exists": "^1.0.0",
     "mocha": "^2.2.5",
     "rimraf": "^2.5.3"
   },
